@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Electronic Solutions Inc DBMZ Motor Control -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+  <!-- Configuration -->
+  <CommandClass id="112">
+    <Value type="list" genre="config" instance="1" index="1" label="Calibration" min="0" max="3" value="0" size="1">
+      <Help>Unit calibration state</Help>
+      <Item label="Normal" value="0" />
+      <Item label="Calibration" value="1" />
+	  <Item label="Factory default" value="129" />
+    </Value>
+    <Value type="list" genre="config" instance="1" index="2" label="Motor direction" min="0" max="1" value="0" size="1">
+      <Help>Unit motor direction state</Help>
+      <Item label="Normal" value="0" />
+      <Item label="Reversed" value="1" />
+    </Value>
+    <Value type="list" genre="config" instance="1" index="3" label="Tilt feature" min="0" max="1" value="0" size="1">
+      <Help>Unit tilt feature state</Help>
+      <Item label="No" value="0" />
+      <Item label="Yes" value="1" />
+    </Value>
+  </CommandClass>
+</Product>
