@@ -69,6 +69,7 @@ Version 1.5
  - Pull Request #910 - Add device Assa Abloy Yale Key Free Push Button Deadbolt from benweb (Nechry)
  - Pull Request #913 - Add device Stelpro Electronic Thermostat STZW402+ from benweb (Nechry)
  - Pull Request #911 - Added Ecolink door/window sensor and fixed Ecolink PIR Motion sensor from gdombiak (Nechry)
+ - Add Electronic Solutions Inc DBMZ Motor Control (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
